--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/bitto/OneDrive/Desktop/REPOSITORY/shapes-GiladBit/Shapes/lib/processing_core.jar"/>
 	<classpathentry kind="lib" path="lib/processing_core.jar"/>
+	<classpathentry kind="lib" path="lib/shapes.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
